--- a/packages/World/package.json
+++ b/packages/World/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "@coinsquare/World-component",
+  "name": "@coinsquare/world-component",
   "version": "0.0.0",
   "description": "World component",
   "scripts": {
-    "build": "babel src --out-dir dist --verbose",
-    "type-check": "echo ''",
+    "build": "babel src --out-dir dist --verbose --extensions '.ts,.tsx'",
+    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist",
+    "prebuild": "rimraf dist && npm run type-check",
+    "postbuild": "npm run build:types",
+    "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
     "dist"
   ],
-  "main": "dist/index.js",
+  "main": "dist/index.ts",
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "react": "^16.5.1",
-    "styled-components": "^3.4.6"
+    "react": "^16.5.1"
   },
   "dependencies": {
-    "styled-system": "^3.1.3",
     "@coinsquare/build": "^0.0.0",
     "@coinsquare/storybook": "^0.0.0"
   }
