--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "styleguidist": "styleguidist server",
     "generate-jsx": "ft jsx-component ./packages",
-    "generate-tsx": "ft tsx-component ./packages"
+    "generate-tsx": "ft tsx-component ./packages",
+    "postinstall": "yarn build"
   },
   "dependencies": {
     "@babel/cli": "7.1.2",
@@ -35,6 +36,7 @@
     "@babel/preset-stage-1": "7.0.0",
     "@babel/preset-typescript": "7.1.0",
     "@babel/runtime": "7.1.2",
+    "@rebass/components": "^4.0.0-1",
     "babel-core": "npm:@babel/core",
     "babel-loader": "8.0.2",
     "babel-plugin-react-docgen": "2.0.0",
@@ -42,11 +44,11 @@
     "babel-plugin-styled-components": "1.7.1",
     "babel-plugin-transform-es2015-modules-simple-commonjs": "0.3.0",
     "lerna": "3.4.3",
+    "prop-types": "^15.6.2",
     "react-docgen-typescript": "1.10.0",
     "react-docgen-typescript-loader": "3.0.0",
-    "react-docgen-typescript-webpack-plugin": "1.1.0"
-  },
-  "devDependencies": {
+    "react-docgen-typescript-webpack-plugin": "1.1.0",
+    "styled-system": "^3.1.11",
     "@commitlint/cli": "7.1.2",
     "@commitlint/config-conventional": "7.1.2",
     "@material-ui/core": "3.0.3",
@@ -61,12 +63,12 @@
     "@types/react": "16.4.14",
     "folder-template": "0.1.4",
     "husky": "1.0.0-rc.14",
-    "react": "16.5.1",
-    "react-dom": "16.5.1",
-    "styled-components": "3.4.6",
-    "webpack": "4.19.0",
-    "react-styleguidist": "7.3.11",
-    "typescript": "3.1.3"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-styleguidist": "^8.0.6",
+    "styled-components": "^4.1.3",
+    "typescript": "3.1.3",
+    "webpack": "4.19.0"
   },
   "commitlint": {
     "extends": [
