--- a/packages/Hello/package.json
+++ b/packages/Hello/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coinsquare/Hello-component",
+  "name": "@coinsquare/hello-component",
   "version": "0.0.0",
   "description": "Hello component",
   "scripts": {
@@ -14,11 +14,15 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "react": "^16.5.1",
-    "styled-components": "^3.4.6"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "styled-components": "^4.1.3",
+    "styled-system": "^3.1.3"
   },
   "dependencies": {
-    "styled-system": "^3.1.3",
+
+  },
+  "devDependencies": {
     "@coinsquare/build": "^0.0.0",
     "@coinsquare/storybook": "^0.0.0"
   }
