--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-docgen-typescript-loader": "3.0.0",
     "react-docgen-typescript-webpack-plugin": "1.1.0",
     "styled-system": "^3.1.11",
-    "@commitlint/cli": "7.1.2",
+    "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
     "@material-ui/core": "3.0.3",
     "@material-ui/icons": "3.0.1",
@@ -62,17 +62,12 @@
     "@storybook/react": "4.0.0-alpha.21",
     "@types/react": "16.4.14",
     "folder-template": "0.1.4",
-    "husky": "1.0.0-rc.14",
+    "husky": "1.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-styleguidist": "^8.0.6",
     "styled-components": "^4.1.3",
     "typescript": "3.1.3",
     "webpack": "4.19.0"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
   }
 }
